@@ -45,6 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pagination\PagedDto.cs" />
+    <Compile Include="Pagination\PagedEnumerable.cs" />
+    <Compile Include="Pagination\PagedExtensions.cs" />
+    <Compile Include="Pagination\PagedMetadata.cs" />
     <Compile Include="Utils\AtomicUtils.cs" />
     <Compile Include="Extensions\CollectionsExtensions.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
@@ -52,7 +56,6 @@
     <Compile Include="Extensions\DictionaryExtensions.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Utils\FlowUtils.cs" />
-    <Compile Include="PagedEnumerable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\SecurityUtils.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
